[package]
authors = ["wh8199 <wh8199@foxmail.com>"]
description = "A cron parse base on saffron(https://github.com/cloudflare/saffron.git)"
edition = "2021"
license-file = "LICENSE"
name = "cron"
repository = "https://github.com/galaxy-iot/cron.git"
version = "0.1.0"

[features]
default = []
std = []

[[bench]]
harness = false
name = "cron"

[[example]]
name = "future-times"
required-features = ["chrono/clock"]

[dependencies]
chrono = {version = "0.4.24"}
nom = {version = "7.1.3"}

[dev-dependencies]
criterion = "0.4.0"
