[package]
authors = ["wh8199 <wh8199@foxmail.com>"]
description = "A cron parse base on saffron(https://github.com/cloudflare/saffron.git)"
edition = "2021"
license-file = "LICENSE"
name = "cron"
repository = "https://github.com/galaxy-iot/cron.git"
version = "0.1.0"

[features]
default = []
std = []

[[example]]
name = "scheduler"
path = "examples/scheduler.rs"

[dependencies]
chrono = "0.4.24"
nom = "7.1.3"
async-channel = "1.8.0"
priority-queue = "1.3.0"

[dev-dependencies]
criterion = "0.4.0"
